--- a/test.html
+++ b/test.html
@@ -1,2 +1,15 @@
-<h1>holaaa</h1>
-<p>no se si <b>entendi</b> esto</p>
+<!doctype html>
+<<!DOCTYPE html>
+<html>
+<head>
+	<title>test page</title>
+</head>
+<body>
+	<h1>holaaas</h1>
+	<p>no se si <b>entendi</b> esto</p>
+	<a href="https://google.com" target="_blank">no tocar</a>
+	<img src="https://static.fundacion-affinity.org/cdn/farfuture/PVbbIC-0M9y4fPbbCsdvAD8bcjjtbFc0NSP3lRwlWcE/mtime:1643275542/sites/default/files/los-10-sonidos-principales-del-perro.jpg">
+	<p>my name is:<br>
+	kit cat</p>
+</body>
+</html>
