--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>sponge boob</title>
 	<link rel="icon" href="img/bob esponja.jpeg">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Hanalei&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/website.css"> 
 </head>
 <body>
 	<!-- header element -->
@@ -18,7 +22,7 @@
 		<h2>about sponge bob</h2>
 		<p>he is yellow</p>
 		<img src="img/esponja.jpeg">
-		<p>bob and his friends</p>
+		<p class="caption">bob and his friends</p>
 		<h2>characteristics</h2>
 		<ol>
 			<li>he have friends</li>
